--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 </head>
 <body>
 
+    <div id="overlay">
+        <p id="stepsTaken">300</p>
+        <img id="refresh" src="./assets/refresh.png" alt="refresh.png" /> 
+        <div class="stepsAmount">
+            <label>Steps:</label>
+            <input id="stepsAmount" type="number" value="300" />
+        </div>
+    </div>
+
     <canvas id="canvas"></canvas>
     <script src="app.js"></script>
 </body>
