--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="overlay">
         <p id="stepsTaken">300</p>
         <img id="refresh" src="./assets/refresh.png" alt="refresh.png" /> 
+        <img id="restart" src="./assets/restart.png" alt="restart.png" />
         <div class="stepsAmount">
             <label>Steps:</label>
             <input id="stepsAmount" type="number" value="300" />
